Regression testing for notification API
This test suite include test for low and high buffer usage condition,
triggers, and multi application client scenario.

Synchronization needs to be implemented to guarantee determinism.
For now it rely on sleep to allow re-sampling thus state change for
consecutive notifications testing.

Signed-off-by: Jonathan Rajotte <jonathan.rajotte-julien@efficios.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1049,6 +1049,7 @@ AC_CONFIG_FILES([
 	tests/regression/tools/crash/Makefile
 	tests/regression/tools/regen-metadata/Makefile
 	tests/regression/tools/regen-statedump/Makefile
+	tests/regression/tools/notification/Makefile
 	tests/regression/ust/Makefile
 	tests/regression/ust/nprocesses/Makefile
 	tests/regression/ust/high-throughput/Makefile
