--- a/tests/regression/Makefile.am
+++ b/tests/regression/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = tools kernel ust
 
-LOG_DRIVER_FLAGS='--merge'
-LOG_DRIVER = env AM_TAP_AWK='$(AWK)' $(SHELL) \
+LOG_DRIVER_FLAGS = --merge --post-script $(top_srcdir)/tests/utils/warn_processes.sh
+LOG_DRIVER = env PGREP='$(PGREP)' AM_TAP_AWK='$(AWK)' $(SHELL) \
 	$(top_srcdir)/config/tap-driver.sh
 
 TESTS = tools/filtering/test_invalid_filter \
