relayd: initialize the global fd tracker from fd_cap parameter
Signed-off-by: Jérémie Galarneau <jeremie.galarneau@efficios.com>

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = subdir-objects
 
-SUBDIRS = string-utils
+SUBDIRS = string-utils fd-tracker
 
 # Make sure to always distribute all folders
 # since SUBDIRS is decided at configure time.
