--- a/src/bin/lttng/Makefile.am
+++ b/src/bin/lttng/Makefile.am
@@ -47,4 +47,5 @@ lttng_LDADD = $(top_builddir)/src/lib/lttng-ctl/liblttng-ctl.la \
 			$(top_builddir)/src/common/string-utils/libstring-utils.la \
 			$(top_builddir)/src/common/filter/libfilter.la \
 			$(top_builddir)/src/common/argpar/libargpar.la \
-			$(POPT_LIBS)
+			$(POPT_LIBS) \
+			-lm
