--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -155,7 +155,8 @@ lttngeventruleinclude_HEADERS= \
 	lttng/event-rule/kernel-syscall.h \
 	lttng/event-rule/tracepoint.h \
 	lttng/event-rule/kernel-tracepoint.h \
-	lttng/event-rule/kernel-uprobe.h
+	lttng/event-rule/kernel-uprobe.h \
+	lttng/event-rule/user-tracepoint.h
 
 noinst_HEADERS = \
 	lttng/action/action-internal.h \
@@ -185,6 +186,7 @@ noinst_HEADERS = \
 	lttng/event-rule/tracepoint-internal.h \
 	lttng/event-rule/kernel-tracepoint-internal.h \
 	lttng/event-rule/kernel-uprobe-internal.h \
+	lttng/event-rule/user-tracepoint-internal.h \
 	lttng/health-internal.h \
 	lttng/kernel-probe-internal.h \
 	lttng/load-internal.h \
